--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>CSSGrids Doodles</title>
 	<link rel="stylesheet" href="https://use.typekit.net/lqy0hwl.css">
