--- a/index.html
+++ b/index.html
@@ -71,13 +71,9 @@
 	<div class="grid">
 		<div class="header">Briller's Doodles</div>
 		<div class="nav"><ul>
-			
-			<li>About</li>
-			
-			<li>Browse</li>
-			
-			<li>Contact</li>
-			
+			<li><a href="about.html">About</a></li>
+			<li><a href="browse.html">Browse</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		</div>
 		<div class="left"><p>Welcome to Briller's Spooky Doodles. You can read a little about how I started at the "About" tab, view some art work at the "Browse" tab, and contact me with questions about prints and personal pieces. Have a look around and hope to hear from you soon! &#128516;</p></div>
